--- a/thread-pool-admin/src/main/resources/templates/index.html
+++ b/thread-pool-admin/src/main/resources/templates/index.html
@@ -13,13 +13,17 @@
             border: 1px solid #ddd;
             border-radius: 5px;
         }
+
+        .red {
+            color: #ff0000;
+        }
     </style>
 </head>
 <body>
 
 <div layout:fragment="content">
     <div class="container">
-    <!--列表顶部搜索和工具条-->
+        <!--列表顶部搜索和工具条-->
         <el-row>
             <el-form :inline="true" :model="searchForm" class="demo-form-inline">
                 <el-form-item label="应用名称">
@@ -28,29 +32,19 @@
                 <el-form-item label="线程池名称">
                     <el-input v-model="searchForm.threadPoolName" placeholder="线程池名称"></el-input>
                 </el-form-item>
-
-                <!--            <el-form-item label="批次状态">-->
-                <!--                <el-select v-model="searchForm.batchStatus" placeholder="批次状态">-->
-                <!--                    <el-option label="&#45;&#45;全部&#45;&#45;" value=""></el-option>-->
-                <!--                    <el-option v-for="(item,index) in batchStatus" :label="item.name" :value="item.key" :key="item.key"></el-option>-->
-                <!--                </el-select>-->
-                <!--            </el-form-item>-->
-
                 <el-form-item>
                     <el-button type="primary" icon="search" @click="searchClick">查询</el-button>
                     <el-button type="success" icon="plus" @click="addClick">新增</el-button>
-                    <el-button type="danger" icon="delete" @click="removeSelection">删除所选</el-button>
                 </el-form-item>
             </el-form>
         </el-row>
         <!--列表-->
         <el-row>
-        <el-table
-                    :data="tableData"
-                    v-loading.body="loading"
-                    border
-                    @selection-change="selectionChange"
-                    style="width: 100%">
+            <el-table :data="tableData"
+                      v-loading.body="loading"
+                      border
+                      @selection-change="selectionChange"
+                      style="width: 100%" header-cell-class-name="table-header">
                 <el-table-column
                         type="selection"
                         width="55">
@@ -61,7 +55,7 @@
                         width="150">
                 </el-table-column>
                 <el-table-column
-                        prop="threadPoolName"
+                        prop="poolName"
                         label="线程池名称"
                         width="200">
                 </el-table-column>
@@ -90,12 +84,10 @@
                 <el-table-column
                         label="操作">
                     <template scope="scope">
-                        <el-button :plain="true" type="success" size="small" icon="edit" @click="editClick(scope.row)">
-                            编辑
+                        <el-button type="text" icon="el-icon-edit" @click="editClick(scope.row)">编辑
                         </el-button>
-                        <el-button :plain="true" type="danger" size="small" icon="delete"
-                                   @click="deleteClick(scope.row)">
-                            删除
+                        <el-button type="text" icon="el-icon-delete" class="red"
+                                   @click="deleteClick(scope.row)">删除
                         </el-button>
                     </template>
                 </el-table-column>
@@ -119,22 +111,21 @@
 
         <!--编辑界面-->
         <el-dialog :title="dialogTitle" :visible.sync="dialogVisible" :before-close="handleClose">
-            <el-form :model="editForm" :inline="true" label-width="80px" :rules="editFormRules" ref="editForm">
-                <el-form-item label="产品ID" prop="productId">
-                    <el-input v-model="editForm.productId"></el-input>
+            <el-form :model="editForm" :inline="true" label-width="100px" :rules="editFormRules" ref="editForm">
+                <el-form-item label="线程池名称" prop="poolName">
+                    <el-input v-model="editForm.poolName" auto-complete="off"></el-input>
                 </el-form-item>
-                <el-form-item label="产品名称" prop="productName">
-                    <el-input v-model="editForm.productName" auto-complete="off"></el-input>
+                <el-form-item label="核心线程数" prop="coreSize">
+                    <el-input v-model="editForm.coreSize"></el-input>
                 </el-form-item>
-                <el-form-item label="商品ID" prop="goodsId">
-                    <el-input v-model="editForm.goodsId"></el-input>
+                <el-form-item label="最大线程数" prop="maxSize">
+                    <el-input v-model="editForm.maxSize" auto-complete="off"></el-input>
                 </el-form-item>
-                <el-form-item label="商品名称" prop="goodsName">
-                    <el-input v-model="editForm.goodsName" auto-complete="off"></el-input>
+                <el-form-item label="空闲等待时间">
+                    <el-input v-model="editForm.keepAliveTime" auto-complete="off"></el-input>
                 </el-form-item>
-
-                <el-form-item label="预定日期">
-                    <el-date-picker type="date" placeholder="选择日期" v-model="editForm.visitDate"></el-date-picker>
+                <el-form-item label="队列容量">
+                    <el-input v-model="editForm.capacity" auto-complete="off"></el-input>
                 </el-form-item>
             </el-form>
             <div slot="footer" class="dialog-footer">
@@ -174,20 +165,11 @@
                 },
                 //编辑界面数据
                 editForm: {
-                    batchId: null,
-                    productId: null,
-                    productName: null,
-                    goodsId: null,
-                    goodsName: null,
-                    batchStatus: null,
-                    visitDate: null,
-                    tradePrice: null,
-                    quantity: null,
-                    payType: null,
-                    runStatus: null,
-                    runInfo: null,
-                    createTime: null,
-                    modifyTime: null
+                    poolName: null,
+                    coreSize: null,
+                    maxSize: null,
+                    keepAliveTime: null,
+                    capacity: null
                 },
 
                 //列表数据
@@ -236,9 +218,47 @@
                 },
                 //表格编辑事件
                 editClick: function (row) {
-                    this.dialogTitle = "编译";
-                    this.dialogVisible = true;
-                    //查询对应的记录赋值
+                    var self = this;
+                    self.dialogTitle = "编辑";
+                    self.dialogVisible = true;
+                    var param = {
+                        appName: row.appName,
+                        threadPoolName: row.poolName
+                    };
+                    axios({
+                        method: 'post',
+                        url: '/getPoolInfo',
+                        data: param
+                    }).then(function (response) {
+                        self.editForm = response.data.content;
+                    }).catch(function (error) {
+                        console.log(error);
+                    });
+                },
+                //保存点击事件
+                editSubmit: function () {
+                    console.info(this.editForm);
+                    //保存数据操作
+                    var self = this;
+
+                    axios({
+                        method: 'post',
+                        url: '/savePoolInfo',
+                        data: self.editForm
+                    }).then(function (response) {
+                        self.searchClick(); //刷新
+
+                        self.$message({
+                            message: '修改成功',
+                            type: 'success'
+                        });
+                    }).catch(function (error) {
+                        self.$message({
+                            message: '保存失败：' + error,
+                            type: 'error'
+                        });
+                    });
+                    this.dialogVisible = false;
                 },
 
                 //表格勾选事件
@@ -261,43 +281,6 @@
                         if (e != "cancel")
                             console.log("出现错误：" + e);
                     });
-                },
-
-
-                //删除所选，批量删除
-                removeSelection: function () {
-                    var _self = this;
-                    var multipleSelection = this.multipleSelection;
-                    if (multipleSelection.length < 1) {
-                        _self.$message({
-                            message: '请至少选中一条记录',
-                            type: 'error'
-                        });
-                        return;
-                    }
-                    var ids = "";
-                    for (var i = 0; i < multipleSelection.length; i++) {
-                        var row = multipleSelection[i];
-                        ids += row.name + ","
-                    }
-                    this.$confirm('确认删除' + ids + '吗?', '提示', {
-                        type: 'warning'
-                    }).then(function () {
-                        _self.$message({
-                            message: ids + '删除成功',
-                            type: 'success'
-                        });
-                        _self.loadingData();//重新加载数据
-                    }).catch(function (e) {
-                        if (e != "cancel")
-                            console.log("出现错误：" + e);
-                    });
-                },
-                //保存点击事件
-                editSubmit: function () {
-                    console.info(this.editForm);
-                    //保存数据操作
-                    this.dialogVisible = false;
                 }
             },
             filters: {
