--- a/thread-pool-admin/src/main/resources/templates/layout.html
+++ b/thread-pool-admin/src/main/resources/templates/layout.html
@@ -158,10 +158,15 @@
         .el-dialog__header {
             border-bottom: 1px solid #ebeef5;
         }
-
+        .el-menu-item {
+            padding: 0px 0px 0px 20px !important;
+        }
         .el-menu-item-a {
             color: rgb(191, 203, 217) ;
             text-decoration: none;
+            display: block;
+            width: 100%;
+            height: 100%;
         }
 
         * {
@@ -287,7 +292,7 @@
                 },
                 {
                     icon: "el-icon-s-grid",
-                    index: "/table",
+                    index: "/subPage",
                     title: "线程管理",
                 }
             ]
